<resources>
    <string name="app_name">Wifi Network Analyzer</string>

    <string name="nav_drawer_open">Navigation Drawer Open</string>
    <string name="nav_drawer_close">Navigation Drawer Close</string>

    <string name="hidden_wifi"><![CDATA[<hidden wifi>]]></string>
    <string name="text_connected">Connected</string>
    <string name="text_not_connected">Not connected</string>
    <string name="no_signal">No Signal</string>
    <string name="select_wifi"><![CDATA[<select wifi>]]></string>
    <string name="default_mac">00:00:00:00:00:00</string>
    <string name="cannot_detect">Cannot detect wifi signal</string>
    <string name="percent">%d %</string>
    <string name="freq_unit">MHz</string>
    <string name="channel">Ch</string>
    <string name="rssi_unit">dBm</string>
    <string name="capabilities">Capabilities</string>
    <string name="connection_info">Connection Info</string>

    <string name="info_name">Name</string>
    <string name="info_link_speed">Link Speed</string>
    <string name="info_ip_address">IP Address</string>
    <string name="info_gateway">Gateway</string>
    <string name="info_netmask">Netmask</string>
    <string name="info_dns_1">DNS 1</string>
    <string name="info_dns_2">DNS 2</string>
    <string name="info_dhcp_server">DHCP Server</string>

    <string name="signal_poor">Poor</string>
    <string name="signal_fair">Fair</string>
    <string name="signal_good">Good</string>
    <string name="signal_excellent">Excellent</string>
    <string name="menu_signal_meter">Signal Meter</string>
    <string name="menu_time_graph">Time Graph</string>
    <string name="menu_ap_list">Access Point List</string>
    <string name="menu_oui_lookup">OUI Lookup</string>
    <string name="menu_about">About</string>

    <string name="title_wifi_signal_meter">Signal Meter</string>
    <string name="title_wifi_ap_list">Wifi List</string>
    <string name="title_select_wifi">Select Wifi</string>
    <string name="title_time_graph">Time Graph</string>
    <string name="title_oui_lookup">OUI Lookup</string>
    <string name="title_about">About</string>
    <string name="signal_strength_label">Signal strength (dBm)</string>
    <string name="empty_wifi_list">No wifi signal in range</string>

    <string name="description">Simple and reliable wifi tools to help you spot the best wifi signal, analyze, discover hidden access point and scan connected devices</string>
    <string name="copyright">Copyright © 2018 - A Aris R</string>
    <string name="license_gaugeview">GaugeView - https://github.com/abdularis/GaugeView</string>
    <string name="license_mpandroidchart">MPAndroidChart - https://github.com/PhilJay/MPAndroidChart</string>
    <string name="license_sqliteassethelper">sqliteassethelper - https://github.com/jgilfelt/android-sqlite-asset-helper</string>
    <string name="license_rxjava">rxjava2 - https://github.com/ReactiveX/RxJava</string>
    <string name="license_rxandroid">rxandroid2 - https://github.com/ReactiveX/RxAndroid</string>
    <string name="license_dagger">dagger2 - https://github.com/google/dagger</string>
    <string name="licenses">Licenses</string>

    <string name="empty_signal_meter">Wifi is out of range or haven\'t any selected yet.</string>

    <string name="oui_search_message">OUI (Organizationally Unique Identifier) lookup. examples: E0:43:DB or by manufacturer Intel, Asus etc.</string>
    <string name="search_by_mac">Search by MAC address</string>
    <string name="search_by_manufact">Search by Manufacturer</string>
    <string name="lbl_search_mac">MAC Address</string>
    <string name="lbl_search_manufact">Manufacturer</string>
    <string name="interfering_channel">Interfering Channels</string>
    <string name="non_interfering_channel">Other Channels</string>
    <string name="connected_wifi">Connected Wifi</string>

    <string name="title_ping">Ping</string>
    <string name="lbl_filter">Filter</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_ssid">SSID</string>
    <string name="lbl_channel">Channel</string>
    <string name="lbl_filter_on">Filter On</string>
    <string name="lbl_filter_by">Filter by</string>
    <string name="lbl_ping">Ping</string>
    <string name="lbl_completed">Completed</string>
    <string name="lbl_stopped">Stopped</string>
    <string name="lbl_in_progress">Ping in progress…</string>
    <string name="lbl_stop">Stop</string>
    <string name="lbl_times">Times</string>
    <string name="empty_ip">0.0.0.0</string>
    <string name="hint_ip_address">Ip address</string>
    <string name="err_ping_msg">Sorry!, something went wrong, please try again.</string>
    <string name="err_ip_address_msg">Please input the correct ip address. example: 192.168.0.50</string>
    <string name="err_na">N/A</string>
    <string name="menu_ping">Ping</string>
    <string name="menu_net_scanner">Network Scanner</string>
    <string name="title_net_scanner">Network Scanner</string>

    <string name="lbl_me">Me</string>
    <string name="lbl_router">Router</string>
    <string name="possible_devices">%s addresses</string>
    <string name="err_wifi_not_connected">Please connect your device to wifi network</string>
    <string name="err_wifi_not_avail">Sorry, it seems that your device doesn\'t have wifi interface</string>
    <string name="err_wifi_unknown">Sorry, something went wrong, please try again</string>
    <string name="lbl_scan">Scan</string>
    <string name="menu_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="pref_scan_interval">Scan Interval</string>
    <string name="pref_thread_count">Scanner Threads</string>
    <string name="pref_thread_count_summary">How many threads used to scan network</string>
    <string name="pref_scan_interval_summary"><![CDATA[Signal meter & time graph update interval]]></string>
    <string name="license_androidnettools">AndroidNetworkTools - https://github.com/stealthcopter/AndroidNetworkTools</string>
</resources>
