<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_signal_meter"
              android:title="@string/menu_signal_meter"
              android:icon="@drawable/ic_signal_meter"
              app:showAsAction="never"/>
        <item android:id="@+id/menu_time_graph"
              android:title="@string/menu_time_graph"
            android:icon="@drawable/ic_time_graph"/>
        <item android:id="@+id/menu_wifi_list"
              android:title="@string/menu_ap_list"
              android:icon="@drawable/ic_wifi_ap_list"/>
        <item
            android:id="@+id/menu_oui_lookup"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_oui_lookup"/>
        <item
            android:id="@+id/menu_ping"
            android:icon="@drawable/ic_ping"
            android:title="@string/menu_ping"/>
    </group>
    <group android:id="@+id/group2">
        <item android:id="@+id/menu_about"
              android:title="@string/menu_about"
              android:icon="@drawable/ic_about"/>
    </group>
</menu>