<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/update_intervals"
        android:entryValues="@array/update_interval_values"
        android:key="update_interval"
        android:summary="@string/pref_scan_interval_summary"
        android:title="@string/pref_scan_interval"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"/>

    <ListPreference
        android:defaultValue="8"
        android:entries="@array/scanner_threads"
        android:entryValues="@array/scanner_thread_values"
        android:key="scanner_threads"
        android:summary="@string/pref_thread_count_summary"
        android:title="@string/pref_thread_count"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"/>

</PreferenceScreen>