<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_card"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical">
        <EditText
            android:id="@+id/textSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/lbl_search_mac"/>

        <ImageButton
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_clear"
            android:tint="@android:color/darker_gray"/>
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp">
        <RadioButton
            android:id="@+id/searchByMac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_mac"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/searchByManufacturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_manufact"/>
    </RadioGroup>

</LinearLayout>